--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -5,15 +5,12 @@ output:
     orientation: rows
 ---
 
-```{r echo = FALSE}
+
+```{r echo=FALSE, eval=TRUE}
 #{r options} applies to chunks of code 
 
 knitr::opts_chunk$set(echo = FALSE) #sets global options to apply for every chunk in the file
 library(flexdashboard)
-
-```
-
-```{r}
 library(utf8)
 library(pillar)
 library(lubridate)
@@ -50,6 +47,7 @@ data$Snow <- as.numeric(as.character(data$Snow))
 
 # finds the null values
 null_data <- data[!complete.cases(data),]
+filled_null_data <- data[!complete.cases(data),]
 # list rows that contain the null values
 
 # Task 2
@@ -76,6 +74,7 @@ for(i in 1:nrow(null_data))
       }
       #replaces the missing value with the average value
       data[rownames(null_data)[i],col_name] <- hourly_average
+      filled_null_data[rownames(null_data)[i],col_name] <- hourly_average
     }
   }
 }
@@ -103,7 +102,6 @@ From the histogram and based on the data given in the excel file, the rental bik
 ### Histogram
 
 ```{r}
-  
 histogram_data <- hist(data$RentCount, breaks=33, col="blue")
 ```
 
@@ -152,106 +150,15 @@ Data Imputation {data-navmenu="Cleaning the data"}
 ### The data provided contained null values as can be seen below:
 
 ```{r}
-# finds the null values
-library(lubridate)
 library(knitr)
-
-# import csv
-data <- read.csv("C:/Users/Malcolm/Downloads/SeoulBikeData.csv", header=FALSE)
-# remove 1st row
-data <- data[-c(1), ]
-# rename columns
-colnames(data) <- c("date","RentCount", "Hour", "Temp", "Hum", "Wind", 'Vis', "Dew","SolRad","Rain", "Snow","Season", "Holiday","Function")
-data <- type.convert(data, as.is= TRUE, na.strings = "NA")
-
-data$Function[data$Function == 'No'] <- FALSE
-data$Function[data$Function == 'Yes'] <- TRUE
-
-data$Holiday[data$Holiday == 'No Holiday'] <- FALSE
-data$Holiday[data$Holiday == 'Holiday'] <- TRUE
-
-data$date <- dmy(data$date)
-data$RentCount <- as.integer(as.character(data$RentCount))
-data$Hour <- as.numeric(as.character(data$Hour))
-data$Temp <- as.numeric(as.character(data$Temp))
-data$Hum <- as.numeric(as.character(data$Hum))
-data$Vis <- as.numeric(as.character(data$Vis))
-data$Dew <- as.numeric(as.character(data$Dew))
-data$Wind <- as.numeric(as.character(data$Wind))
-data$SolRad <- as.numeric(as.character(data$SolRad))
-data$Rain <- as.numeric(as.character(data$Rain))
-data$Snow <- as.numeric(as.character(data$Snow))
-
-# finds the null values
-null_data <- data[!complete.cases(data),]
 kable(null_data, caption = "Null values")
 ```
+
 As a data imputation strategy we opted to use the '(Rounded) Mean or Moving Average or Median Value' strategy. This implementation was done by getting the average value of the missing data of the same Season and Hour and replacing the missing value with it. After the data imputation was complete, the null values were replaced:
 
 ```{r}
-# finds the null values
-library(utf8)
-library(pillar)
-library(lubridate)
-library(dplyr)
 library(knitr)
-
-# import csv
-data <- read.csv("C:/Users/Malcolm/Downloads/SeoulBikeData.csv", header=FALSE)
-# remove 1st row
-data <- data[-c(1), ]
-# rename columns
-colnames(data) <- c("date","RentCount", "Hour", "Temp", "Hum", "Wind", 'Vis', "Dew","SolRad","Rain", "Snow","Season", "Holiday","Function")
-data <- type.convert(data, as.is= TRUE, na.strings = "NA")
-
-data$Function[data$Function == 'No'] <- FALSE
-data$Function[data$Function == 'Yes'] <- TRUE
-
-data$Holiday[data$Holiday == 'No Holiday'] <- FALSE
-data$Holiday[data$Holiday == 'Holiday'] <- TRUE
-
-data$date <- dmy(data$date)
-data$RentCount <- as.integer(as.character(data$RentCount))
-data$Hour <- as.numeric(as.character(data$Hour))
-data$Temp <- as.numeric(as.character(data$Temp))
-data$Hum <- as.numeric(as.character(data$Hum))
-data$Vis <- as.numeric(as.character(data$Vis))
-data$Dew <- as.numeric(as.character(data$Dew))
-data$Wind <- as.numeric(as.character(data$Wind))
-data$SolRad <- as.numeric(as.character(data$SolRad))
-data$Rain <- as.numeric(as.character(data$Rain))
-data$Snow <- as.numeric(as.character(data$Snow))
-
-# finds the null values
-null_data <- data[!complete.cases(data),]
-
-for(i in 1:nrow(null_data)) 
-{
-  
-  for(j in 1:ncol(null_data))
-  {
-    # if there is a null in the column we replace it with the seasons hourly average
-    if(is.na(null_data[i,j]))
-    {
-      # gets column name of missing value
-      col_name = (colnames(null_data)[j])
-      #gets the hour where the missing value is
-      hour = null_data[i, "Hour"]
-      #gets all data where the season and hour match that of the missing value
-      season_hour_data = filter(data, Season == null_data[i, "Season"] & Hour == hour) 
-      #gets average value
-      hourly_average = mean(season_hour_data[,col_name], na.rm = TRUE)
-      if(col_name == "RentCount")
-      {
-        hourly_average = floor(hourly_average)
-      }
-      #replaces the missing value with the average value
-      null_data[rownames(null_data)[i],col_name] <- hourly_average
-    }
-  }
-}
-
-kable(null_data, caption = "Imputated Null values")
+kable(filled_null_data, caption = "Imputated Null values")
 ```
 
 The code for the imputation is as follows:
@@ -303,6 +210,7 @@ monthly <- data %>%  group_by(month = lubridate::floor_date(date, "month")) %>%
 
 # convert from date to month name
 monthly$month <- months(as.Date(monthly$month)) 
+
 # order by month
 monthly <- monthly %>% mutate(month = factor(month, levels=month.name)) %>% arrange(month)
 
