--- a/documentation.rmd
+++ b/documentation.rmd
@@ -405,20 +405,22 @@ melted_grouped_weekday_data %>% ggplot(aes(x=variable, y=value, color=Day, group
 To compare summer and winter data, first a dataframe was created from filtering the data from other seasons. Only required columns where selected
 ```{r eval=TRUE}
 #filters and only keeps required columns
-summer_winter_data <- data %>% filter(Season == "Summer" | Season =="Winter") %>% select(date, Hour, RentCount, Season)
+summer_winter_data <- data %>% filter(Season == "Summer" | Season =="Winter") %>%
+  select(date, Hour, RentCount, Season)
 ```
 Then the hourly and daily averages where calculated.
 ```{r eval=TRUE}
 # gets hourly averages
-summer_winter_hourly_average <- summer_winter_data %>% group_by(Season) %>% summarise(average=mean(RentCount))
+summer_winter_hourly_average <- summer_winter_data %>% group_by(Season) %>%
+  summarise(average=mean(RentCount))
 
 # gets totals for day
-summer_winter_daily_average <- summer_winter_data %>% group_by(date) %>% summarise(Season=Season, total=sum(RentCount)) %>%
+summer_winter_daily_average <- summer_winter_data %>% group_by(date) %>%
+  reframe(Season=Season, total=sum(RentCount)) %>%
 # gets daily averages
   group_by(Season) %>% summarise(average=mean(total))
 
 ```
-\newpage
 Then the data was passed to ggplot to plot the charts.
 ```{r eval=TRUE, fig.show="hold", out.width="50%"}
 # plots daily averages
